k8s/base/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service
  namespace: aiops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
        - name: auth-service

          image: auth-service:v0.1.1

          imagePullPolicy: Never

          ports:
            - containerPort: 8000
