k8s/base/auth-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service
  namespace: aiops

spec:
  selector:
    app: auth-service

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: NodePort
